# chowbea-pdf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  purpose.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/jobs/: queue.py  registry.py  schemas.py  stats.py  worker.py
api/app/routers/: jobs.py  pdf.py
api/app/services/: compress.py  convert.py  lock.py  merge.py  rotate.py  split.py  unlock.py
api/tests/: conftest.py  test_config.py  test_convert_service.py  test_job_endpoints.py  test_lifespan.py  test_merge_service.py  test_registry.py  test_rotate_service.py  test_split_service.py  test_stats.py  test_submit_endpoints.py  test_worker.py
docs/superpowers/plans/: 2026-07-02-merge-tool.md  2026-07-03-convert-tool.md  2026-07-03-jobs-counter.md  2026-07-03-landing-dnd.md  2026-07-03-preserve-tool-state.md  2026-07-03-rotate-tool.md  2026-07-15-split-tool.md
docs/superpowers/specs/: 2026-07-02-merge-tool-design.md  2026-07-02-open-source-kit-design.md  2026-07-02-rabbitmq-queue-design.md  2026-07-03-convert-tool-design.md  2026-07-03-jobs-counter-design.md  2026-07-03-landing-dnd-design.md  (+1 more)
web/: .dockerignore  Dockerfile  api.config.toml  components.json  package.json  tsconfig.json  vite.config.ts
web/design-system/: Chowbea Design System.dc.html  Chowbea PDF - Bold.dc.html
web/src/: routeTree.gen.ts  styles.css
(+49 files in other folders)
