[project]
name = "chowbea-pdf-api"
version = "0.1.0"
description = "FastAPI backend for batch PDF actions (compression and more)."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic-settings==2.7.1",
    "pikepdf==9.5.2",
    "aio-pika==9.6.2",
    "img2pdf==0.6.3",
    "pdf2docx==0.5.13",
    "weasyprint==69.0",
    "pdfminer-six==20260107",
]

# No [build-system]: this is an application, not a distributable package, so uv
# installs only the dependencies and we run uvicorn against the app/ directory.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
